@startuml



threadserver <|-- mainserver

jsonmsg --|> parse
Request --|> parse
Response --|> parse


class mainserver {
   main()
}

class threadserver {
 run()
}

class jsonmag{
}
class Request{

}
class parse{
}
class Response{

}


Datasql --|> SQL
deck --|> SQL
PackageData --|> SQL
scoreboard --|> SQL
stats --|> SQL
trade --|> SQL
user --|> SQL

interface SQL{
}
class GameData{
}
class Datasql{
}
class deck{
}
class PackageData{
}
class scoreboard{
}
class stats{
}
class trade{
}
class user{
}

@enduml